# bunkr-client

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/config/: bunkr_config.rs  config.rs  mod.rs
src/core/: downloader.rs  mod.rs  types.rs  uploader.rs  utils.rs
src/preprocess/: preprocess.rs
src/ui/: ui.rs
