[package]
name = "bunkr_uploader"
version = "0.1.0"
edition = "2021"

[features]
default = ["ui"]
ui = ["ratatui", "crossterm"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["multipart", "stream", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }
indicatif = "0.18"
futures = "0.3"
clap = { version = "4.5", features = ["derive"] }
mime_guess = "2.0"
uuid = { version = "1.7", features = ["v4"] }
anyhow = "1.0"
keyring = { version = "3.6", features = ["windows-native", "linux-native"] }
toml = "0.9"
dirs = "6.0"
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.29", optional = true }

[profile.release]
opt-level = 3
lto = true
panic = "abort"
strip = true