[package]
name = "bunkr-client"
version = "0.2.1"
edition = "2021"
description = "A Rust library and CLI tool for uploading files to Bunkr.cr"
license = "MIT"
repository = "https://github.com/sn0w12/bunkr-client"
homepage = "https://github.com/sn0w12/bunkr-client"
keywords = ["bunkr", "uploader", "cli", "file-upload"]
categories = ["command-line-utilities"]

[lib]
name = "bunkr_client"
path = "src/lib.rs"

[features]
default = ["cli", "ui", "download"]
cli = ["clap", "anstyle", "keyring", "toml", "dirs"]
ui = ["ratatui", "crossterm", "webbrowser"]
download = ["json5", "regex"]

[dependencies]
reqwest = { version = "0.13", default-features = false, features = ["multipart", "stream", "json", "rustls", "form"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.52", features = ["macros", "rt-multi-thread", "fs"] }
tokio-util = { version = "0.7", features = ["io"] }
mime_guess = "2.0"
uuid = { version = "1.23", features = ["v4"] }
anyhow = "1.0"
base64 = "0.22"
urlencoding = "2.1"

clap = { version = "4.6", features = ["derive"], optional = true }
anstyle = { version = "1.0", optional = true }
keyring = { version = "3.6", features = ["windows-native", "linux-native"], optional = true }
toml = { version = "1.0", optional = true }
dirs = { version = "6.0", optional = true }

ratatui = { version = "0.30", optional = true }
crossterm = { version = "0.29", optional = true }
webbrowser = { version = "1.2", optional = true }

json5 = { version = "1.3", optional = true }
regex = { version = "1.10", optional = true }

[profile.release]
opt-level = 3
lto = true
panic = "abort"
strip = true